modified:   BoardLayersListener.java